Static/css/styles.css
html, body{
  background-color: white;
  font-family: Poppins-Regular, sans-serif;
}
header{
  width: 100%;
  height: 60px;
  background-color: white;
}
a {
  cursor: url("../images/fatbugslink.png"), default;
}

h1 {
  position: absolute;
  padding: 3px;
  float:left;
  margin-left: 2%;
  margin-top: 10px;
  color: black;
}
ul {
  width: auto;
  float: right;
  margin-top: 8px;
}
li {
  display: inline-block;
  padding: 15px 30px;
}
nav a, nav a:active, nav a:visited,nav a:focus {
  text-align: center;
  color: black;
  font-size: 1.2vw;
  text-decoration: none;
}
nav a:hover {
  text-decoration: none;
  color: gray;
}
.container{
  font-family: "Calibri";
}

/* Default buttons styling */
.cvd {
  /* default for <button>, but useful for <a> */
  display: inline-block;
  text-align: center;
  text-decoration: none;
  font-family: "Calibri";
  font-size: 15px;
  transition: all 0.3s ease 0s;
  width: 80px;

  /* create a small space when buttons wrap on 2 lines */
  margin: 2px 0;

  /* invisible border (will be colored on hover/focus) */
  border: 2px solid #095e8c;
  border-radius: 20px;

  /* size comes from text & padding (no width/height) */
  padding: 0.8em 1em;

  /* make sure colors have enough contrast! */
  color: #095e8c;
  background-color: white;
}
.cvd:active {
  transform: translateY(2px);
  filter: saturate(150%);
  outline: none;
}
.cvd:hover {
  color: white;
  background-color: #095e8c;
}

.dt-button-collection {
	position: absolute;
	top: 0;
	left: 0;
	width: 150px;
	margin-top: 3px;
	padding: 8px 8px 4px 8px;
	border: 1px solid #ccc;
	border: 1px solid rgba( 0, 0, 0, 0.4 );
	background-color: white;
	overflow: hidden;
	z-index: 2002;
	border-radius: 5px;
	box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);

	button.dt-button,
	div.dt-button,
	a.dt-button {
		position: relative;
		left: 0;
		right: 0;
		width: 100%;

		display: block;
		float: none;
		margin-bottom: 4px;
		margin-right: 0;

		&:active:not(.disabled),
		&.active:not(.disabled) {
			@include dtb-two-stop-gradient(#f0f0f0, #dadada);
			box-shadow: inset 1px 1px 3px #666;
		}
	}

	@include dtb-fixed-collection();
}

/* Table preferences button styling */
.buttons-colvis {
  /* default for <button>, but useful for <a> */
  display: inline-block;
  text-align: center;
  text-decoration: none;
  font-family: "Calibri";
  font-size: 15px;
  transition: all 0.3s ease 0s;
  width: 95px;

  /* create a small space when buttons wrap on 2 lines */
  margin: 2px 0;

  /* invisible border (will be colored on hover/focus) */
  border: 2px solid #f54242;
  border-radius: 20px;

  /* size comes from text & padding (no width/height) */
  padding: 0.8em 1em;

  /* make sure colors have enough contrast! */
  color: #f54242;
  background-color: white;
}
.buttons-colvisGroup:active {
  transform: translateY(2px);
  filter: saturate(150%);
  outline: none;
}

.buttons-colvis:hover {
  color: white;
  background-color: #f54242;
}
.dt-button-collection {
  width: 150px;
}
.buttons-columnVisibility {
  display: block;
}
.buttons-columnVisibility:hover {
  color: #f54242;
}


/* Color squares for highlighter key */
.foo {
  float: left;
  width: 20px;
  height: 20px;
  margin: 5px;
  border: 1px solid rgba(0, 0, 0, .2);
}

.red {
  background: red;
}

.yellow {
  background: yellow;
}

.orange {
  background: orange;
}


.navbar-inverse, .nav.navbar-nav.navbar-right li a {
  -webkit-transition: background-color .25s ease-in;
  color: white;
  background-color: black;
  margin: 0;
}

.navbar-inverse {
  border-bottom: 3px solid #11abff;
}

.navbar-inverse .navbar-brand {
  color: white;
}

.dropdown-menu {
  border-top: 3px solid #11abff;
  background-color: black;
}

.form-control{
  margin-top: -4px;
  margin-bottom: 15px;
  height: 35px;
  width: 250px;
  font-size: large;
}

dt {
  font-size: large;
}

.form-control.required {
  border: 1px solid red;
}

.flashes {
  color: #11abff;
  size: 100%;
}


.table, .table-striped, .table-hover {
  font-family: Poppins-Regular, sans-serif;
  background-color: white;
  border: 10px red;
  width: 100%;
}

#menu-toggle {
  color: white;
  float: right;
  line-height: 50px;
  font-size: 24px;
  cursor: pointer;
  display: none;
}

#menu-toggle li :hover {
  background-color: black;
  color: #e0e0e0;
}

.navbar-collapse.collapse {
  display: block!important;
  padding-right: 50px;
}

.navbar-right {
  float: right!important;
}

@media (max-width: 1200px) {

  #menu-toggle {
    display: block!important;
    float: left;
  }

  #toggle-off {
    display: none;
  }
  .navbar-brand {
    display: none;
  }
}
.dtrg-group, .dtrg-start, .dtrg-level-1 {
  font-weight: 900;
  font-size: 17px;
}
.dtrg-level-0 td:before {
  content: "Job # ";
}
.dtrg-level-1 td:before {
  content: "Work Order # ";
}

#hidden {
  color: black;
  background-color: black;
}

.alert {
  font-size: 40px;
  text-align: center;
  color: #f54242;
}
.save_name {
  float:left;
  padding-right: 20px;
}
.schedule_wrap{
  margin: auto;
  width: 100%;
  text-align: center;
}
.schedule_links a {
  text-align: left;
  color: black;
  font-size: 24px;
  text-align: left;
}
th {
  background-color: #095e8c;
  border: 20px solid black;
  color: #DDDDDD;
}

.dt-buttons{
  padding-left: 20px;
}
#myTable_filter{
  padding-right: 20px;
}

.mass-delete {
  color: red;
}

